==> qmk/qmk_firmware/tool/mbed/mbed-sdk/libraries/USBDevice/USBDevice/USBHAL_STM32F4.cpp <==
#include "USBHAL.h"
#include "USBRegs_STM32.h"
#include "pinmap.h"

void USBHAL::setAddress(uint8_t address) {
    OTG_FS->DREGS.DCFG |= (address << 4);
    EP0write(0, 0);
}

bool USBHAL::realiseEndpoint(uint8_t endpoint, uint32_t maxPacket,
                             uint32_t flags) {
    uint32_t epIndex = endpoint >> 1;

    uint32_t type;
    switch (endpoint) {
        case EP0IN:
        case EP0OUT:
            type = 0;
            break;
        case EPISO_IN:
        case EPISO_OUT:
            type = 1;
        case EPBULK_IN:
        case EPBULK_OUT:
            type = 2;
            break;
        case EPINT_IN:
        case EPINT_OUT:
            type = 3;
            break;
    }

    // Generic in or out EP controls
    uint32_t control = (maxPacket << 0) | // Packet size
                       (1 << 15) | // Active endpoint
                       (type << 18); // Endpoint type

    if (endpoint & 0x1) { // In Endpoint
        // Set up the Tx FIFO
        if (endpoint == EP0IN) {
            OTG_FS->GREGS.DIEPTXF0_HNPTXFSIZ = ((maxPacket >> 2) << 16) |
                                               (bufferEnd << 0);
        }
        else {
            OTG_FS->GREGS.DIEPTXF[epIndex - 1] = ((maxPacket >> 2) << 16) |
                                                 (bufferEnd << 0);
        }
        bufferEnd += maxPacket >> 2;

        // Set the In EP specific control settings
        if (endpoint != EP0IN) {
            control |= (1 << 28); // SD0PID
        }

        control |= (epIndex << 22) | // TxFIFO index
                   (1 << 27); // SNAK
        OTG_FS->INEP_REGS[epIndex].DIEPCTL = control;

        // Unmask the interrupt
        OTG_FS->DREGS.DAINTMSK |= (1 << epIndex);
    }
    else { // Out endpoint
        // Set the out EP specific control settings
        control |= (1 << 26); // CNAK
        OTG_FS->OUTEP_REGS[epIndex].DOEPCTL = control;

        // Unmask the interrupt
        OTG_FS->DREGS.DAINTMSK |= (1 << (epIndex + 16));
    }
    return true;
}

uint32_t USBHAL::EP0getReadResult(uint8_t *buffer) {
    uint32_t* buffer32 = (uint32_t *) buffer;
    uint32_t length = rxFifoCount;
    for (uint32_t i = 0; i < length; i += 4) {
        buffer32[i >> 2] = OTG_FS->FIFO[0][0];
    }

    rxFifoCount = 0;
    return length;
}

EP_STATUS USBHAL::endpointRead(uint8_t endpoint, uint32_t maximumSize) {
    uint32_t epIndex = endpoint >> 1;
    uint32_t size = (1 << 19) | // 1 packet
                    (maximumSize << 0); // Packet size
//    if (endpoint == EP0OUT) {
        size |= (1 << 29); // 1 setup packet
//    }
    OTG_FS->OUTEP_REGS[epIndex].DOEPTSIZ = size;
    OTG_FS->OUTEP_REGS[epIndex].DOEPCTL |= (1 << 31) | // Enable endpoint
                                           (1 << 26); // Clear NAK

    epComplete &= ~(1 << endpoint);
    return EP_PENDING;
}

EP_STATUS USBHAL::endpointReadResult(uint8_t endpoint, uint8_t * buffer, uint32_t *bytesRead) {
    if (!(epComplete & (1 << endpoint))) {
        return EP_PENDING;
    }

    uint32_t* buffer32 = (uint32_t *) buffer;
    uint32_t length = rxFifoCount;
    for (uint32_t i = 0; i < length; i += 4) {
        buffer32[i >> 2] = OTG_FS->FIFO[endpoint >> 1][0];
    }
    rxFifoCount = 0;
    *bytesRead = length;
    return EP_COMPLETED;
}

EP_STATUS USBHAL::endpointWrite(uint8_t endpoint, uint8_t *data, uint32_t size) {
    uint32_t epIndex = endpoint >> 1;
    OTG_FS->INEP_REGS[epIndex].DIEPTSIZ = (1 << 19) | // 1 packet
                                          (size << 0); // Size of packet
    OTG_FS->INEP_REGS[epIndex].DIEPCTL |= (1 << 31) | // Enable endpoint
                                          (1 << 26); // CNAK
    OTG_FS->DREGS.DIEPEMPMSK = (1 << epIndex);

    while ((OTG_FS->INEP_REGS[epIndex].DTXFSTS & 0XFFFF) < ((size + 3) >> 2));

    for (uint32_t i=0; i<(size + 3) >> 2; i++, data+=4) {
        OTG_FS->FIFO[epIndex][0] = *(uint32_t *)data;
    }

    epComplete &= ~(1 << endpoint);

    return EP_PENDING;
}

void USBHAL::stallEndpoint(uint8_t endpoint) {
    if (endpoint & 0x1) { // In EP
        OTG_FS->INEP_REGS[endpoint >> 1].DIEPCTL |= (1 << 30) | // Disable
                                                    (1 << 21); // Stall
    }
    else {  // Out EP
        OTG_FS->DREGS.DCTL |= (1 << 9); // Set global out NAK
        OTG_FS->OUTEP_REGS[endpoint >> 1].DOEPCTL |= (1 << 30) | // Disable
                                                     (1 << 21); // Stall
    }
}

void USBHAL::_usbisr(void) {
    instance->usbisr();
}

void USBHAL::usbisr(void) {
    if (OTG_FS->GREGS.GINTSTS & (1 << 12)) { // USB Reset
        // Set SNAK bits
        OTG_FS->OUTEP_REGS[0].DOEPCTL |= (1 << 27);
        OTG_FS->OUTEP_REGS[1].DOEPCTL |= (1 << 27);
        OTG_FS->OUTEP_REGS[2].DOEPCTL |= (1 << 27);
        OTG_FS->OUTEP_REGS[3].DOEPCTL |= (1 << 27);

        OTG_FS->DREGS.DIEPMSK = (1 << 0);

        bufferEnd = 0;

        // Set the receive FIFO size
        OTG_FS->GREGS.GRXFSIZ = rxFifoSize >> 2;
        bufferEnd += rxFifoSize >> 2;

        // Create the endpoints, and wait for setup packets on out EP0
        realiseEndpoint(EP0IN, MAX_PACKET_SIZE_EP0, 0);
        realiseEndpoint(EP0OUT, MAX_PACKET_SIZE_EP0, 0);
        endpointRead(EP0OUT, MAX_PACKET_SIZE_EP0);

        OTG_FS->GREGS.GINTSTS = (1 << 12);
    }

    if (OTG_FS->GREGS.GINTSTS & (1 << 4)) { // RX FIFO not empty
        uint32_t status = OTG_FS->GREGS.GRXSTSP;

        uint32_t endpoint = (status & 0xF) << 1;
        uint32_t length = (status >> 4) & 0x7FF;
        uint32_t type = (status >> 17) & 0xF;

        rxFifoCount = length;

        if (type == 0x6) {
            // Setup packet
            for (uint32_t i=0; i<length; i+=4) {
                setupBuffer[i >> 2] = OTG_FS->FIFO[0][i >> 2];
            }
            rxFifoCount = 0;
        }

        if (type == 0x4) {
            // Setup complete
            EP0setupCallback();
            endpointRead(EP0OUT, MAX_PACKET_SIZE_EP0);
        }

        if (type == 0x2) {
            // Out packet
            if (endpoint == EP0OUT) {
                EP0out();
            }
            else {
                epComplete |= (1 << endpoint);
                if ((instance->*(epCallback[endpoint - 2]))()) {
                    epComplete &= (1 << endpoint);
                }
            }
        }

        for (uint32_t i=0; i<rxFifoCount; i+=4) {
            (void) OTG_FS->FIFO[0][0];
        }
        OTG_FS->GREGS.GINTSTS = (1 << 4);
    }

    if (OTG_FS->GREGS.GINTSTS & (1 << 18)) { // In endpoint interrupt
        // Loop through the in endpoints
        for (uint32_t i=0; i<4; i++) {
            if (OTG_FS->DREGS.DAINT & (1 << i)) { // Interrupt is on endpoint

                if (OTG_FS->INEP_REGS[i].DIEPINT & (1 << 7)) {// Tx FIFO empty
                    // If the Tx FIFO is empty on EP0 we need to send a further
                    // packet, so call EP0in()
                    if (i == 0) {
                        EP0in();
                    }
                    // Clear the interrupt
                    OTG_FS->INEP_REGS[i].DIEPINT = (1 << 7);
                    // Stop firing Tx empty interrupts
                    // Will get turned on again if another write is called
                    OTG_FS->DREGS.DIEPEMPMSK &= ~(1 << i);
                }

                // If the transfer is complete
                if (OTG_FS->INEP_REGS[i].DIEPINT & (1 << 0)) { // Tx Complete
                    epComplete |= (1 << (1 + (i << 1)));
                    OTG_FS->INEP_REGS[i].DIEPINT = (1 << 0);
                }
            }
        }
        OTG_FS->GREGS.GINTSTS = (1 << 18);
    }

    if (OTG_FS->GREGS.GINTSTS & (1 << 3)) { // Start of frame
        SOF((OTG_FS->GREGS.GRXSTSR >> 17) & 0xF);
        OTG_FS->GREGS.GINTSTS = (1 << 3);
    }
}
